# slack-okta-bot

./: .gitignore  README.md  build_lambda.sh  pyproject.toml  slack-okta-bot.yaml
slack_okta_bot/: __init__.py  aws_lambda.py  blocks.py  config.py  okta.py  slack.py
