[tool.poetry]
name = "slack-okta-bot"
version = "0.0.2"
description = "Provides quick access to Okta user management from Slack"
authors = ["Mathew Moon <me@mathewmoon.net>"]
packages = [
    { include = "slack_okta_bot"}
]
homepage = "https://github.com/mathewmoon/slack-okta-bot"
documentation = "https://github.com/mathewmoon/slack-okta-bot"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
slack-bolt = "^1.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slack-okta-bot = "slack_okta_bot:slack.run_local"
